k8s-manifest/fastapi_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8000
  type: ClusterIP
