k8s-manifest/fastapi_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-fastapi-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - kind.neo.nsstc.uah.edu
    secretName: ingress-tls
  rules:
  - host: kind.neo.nsstc.uah.edu
    http:
      paths:
      - pathType: Prefix
        path: /api/v1
        backend:
          service:
            name: fastapi
            port:
              number: 443
